integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/FacturaNoEncontradaException.java
package com.example.mycar.error;

public class FacturaNoEncontradaException extends RuntimeException {
    public FacturaNoEncontradaException(Long facturaId) {
        super("No se encontró la factura con ID " + facturaId);
    }
}

